포트폴리오 pofo agency 제작중 원본 소스

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </ul>
 
     <div id="wrap">
-        <header id="header">
+        <header id="header" class="">
             <div class="container">
               <div class="wrap">
                   <div class="logo">
